tests/pure_component/pure_component.exp
Error: test.js:4
  4: (<C />); // error (`x` is a required prop)
      ^^^^^ React element `C`
  3: class C extends React.PureComponent<void, { x: number }> {}
                                               ^^^^^^^^^^^^^ property `x`. Property not found in
  4: (<C />); // error (`x` is a required prop)
      ^^^^^ props of React element `C`


Found 1 error
